--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta target="_black" title="Wikipedia" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixture</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/fixture/img/.png">
+    <link rel="icon" href="/fixture/img/icon.ico">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
             <th>GRUPO D</th>
         </tr>
         <tr>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Catar"><img src="/fixture/img/Banderas/qa.svg"></a> Qatar</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Catar"><img src="/img/Banderas/qa.svg"></a> Qatar</td>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Inglaterra"><img src="img/Banderas/gb-eng.svg"></a> Inglaterra</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Argentina"><img src="/fixture/img/Banderas/ar.svg"></a> Argentina</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Argentina"><img src="/img/Banderas/ar.svg"></a> Argentina</td>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Francia"><img src="/fixture/img/Banderas/fr.svg"></a> Francia</td>
         </tr>
         <tr>
@@ -51,10 +51,10 @@
             <th>GRUPO H</th>
         </tr>
         <tr>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/España"><img src="/fixture/img/Banderas/es.svg"></a> España</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/España"><img src="/img/Banderas/es.svg"></a> España</td>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Belgica"><img src="img/Banderas/be.svg"></a> Belgica</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Brasil"><img src="/fixture/img/Banderas/br.svg"></a> Brasil</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Portugal"><img src="/fixture/img/Banderas/pt.svg"></a> Portugal</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Brasil"><img src="/img/Banderas/br.svg"></a> Brasil</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Portugal"><img src="/img/Banderas/pt.svg"></a> Portugal</td>
         </tr>
         <tr>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Costa rica"><img src="img/Banderas/cr.svg"></a> Costa rica</td>
