--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <th>GRUPO D</th>
         </tr>
         <tr>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Catar"><img src="/img/Banderas/qa.svg"></a> Qatar</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Catar"><img src="img/Banderas/qa.svg"></a> Qatar</td>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Inglaterra"><img src="img/Banderas/gb-eng.svg"></a> Inglaterra</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Argentina"><img src="/img/Banderas/ar.svg"></a> Argentina</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Francia"><img src="/fixture/img/Banderas/fr.svg"></a> Francia</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Argentina"><img src="img/Banderas/ar.svg"></a> Argentina</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Francia"><img src="img/Banderas/fr.svg"></a> Francia</td>
         </tr>
         <tr>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Ecuador"><img src="img/Banderas/ec.svg"></a> Ecuador</td>
@@ -51,10 +51,10 @@
             <th>GRUPO H</th>
         </tr>
         <tr>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/España"><img src="/img/Banderas/es.svg"></a> España</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/España"><img src="img/Banderas/es.svg"></a> España</td>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Belgica"><img src="img/Banderas/be.svg"></a> Belgica</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Brasil"><img src="/img/Banderas/br.svg"></a> Brasil</td>
-             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Portugal"><img src="/img/Banderas/pt.svg"></a> Portugal</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Brasil"><img src="img/Banderas/br.svg" alt=""></a> Brasil</td>
+             <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Portugal"><img src="img/Banderas/pt.svg"></a> Portugal</td>
         </tr>
         <tr>
              <td><a target="_black" title="Wikipedia" href="https://es.wikipedia.org/wiki/Costa rica"><img src="img/Banderas/cr.svg"></a> Costa rica</td>
