--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta target="_black" title="Wikipedia" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixture</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/fixture/img/icon.ico">
+    <link rel="icon" href="img/icon.ico">
 </head>
 
 <body>
